Fix CGI execution issue and transition to GitHub-based asset downloads
PROBLEM FIXED:
- CGI scripts were not executing properly due to conflicting Apache configurations
- Multiple SetHandler directives were causing plain text responses instead of script execution

CHANGES MADE:

1. Fixed Apache CGI Configuration Conflicts
- terraform/assets/configs/cgi-enabled.conf: Removed duplicate 'Options +ExecCGI' directive
- Added explanatory comments about CGI configuration being handled in apache-vhost.conf
- This prevents conflicts between multiple CGI configuration files

2. Transitioned from S3 to GitHub Asset Downloads
- terraform/main.tf: Changed user_data.sh download from S3 to GitHub raw URLs
- terraform/user_data.sh: Updated download_asset() function to use GitHub instead of S3
- Commented out original S3 download code for reference
- Updated fallback content for cgi-enabled.conf to match new configuration

3. Benefits of This Approach
- Eliminates dependency on S3 bucket creation and management
- Simplifies deployment process for GitHub-based workflows
- Reduces infrastructure complexity and cost
- Makes the project more accessible for contributors

4. Backward Compatibility
- S3 download code is preserved in comments for reference
- Fallback mechanisms still work if GitHub downloads fail
- No breaking changes to existing functionality

TESTING:
- CGI scripts now execute properly (command injection works)
- Bootstrap process downloads assets from GitHub successfully
- Fallback mechanisms work when needed
- No regression in existing functionality

IMPACT:
- Fixes the recurring CGI execution issue when redeploying VM
- Simplifies the deployment architecture
- Improves reliability of asset downloads
- Reduces operational complexity

--- a/terraform/assets/configs/cgi-enabled.conf
+++ b/terraform/assets/configs/cgi-enabled.conf
@@ -1,5 +1,6 @@
+# CGI configuration is handled in apache-vhost.conf to avoid conflicts
+# This file intentionally left minimal to prevent duplicate SetHandler directives
 <Directory "/usr/lib/cgi-bin">
     AllowOverride None
-    Options +ExecCGI
     Require all granted
 </Directory>
